<resources>
    <string name="app_name">Bravo</string>
    <string name="home">Tela Principal</string>
    <string name="shop_cart">Carrinho</string>
    <string name="search">Pesquisa</string>
    <string name="category">Categoria</string>
    <string name="profile">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_desc">Logo do Aplicativo Bravo</string>
    <string name="img_up">Imagem de um Volgswagen Up!</string>
    <string name="img_saveiro">Imagem de uma saveiro nova</string>
    <string name="img_mobi">Imagem de um fiat Mobi</string>
    <string name="promotion">Promoção</string>
    <string name="no_image_found">Nenhuma imagem encontrada</string>
    <string name="most_selled">Mais Vendidos</string>
    <string name="find_you_dream_car">Encontre seu carro dos sonhos</string>
    <string name="find_now">Encontre já</string>
    <string name="category_name">Nome Categoria</string>
    <string name="term_and_conditions">Termos e Condições</string>
    <string name="customer_service">SAC</string>
    <string name="Register">Cadastrar</string>
    <string name="login">Entrar</string>
    <string name="e_mail">E-mail</string>
    <string name="email_label">E-mail:*</string>
    <string name="password_label">Senha:*</string>
    <string name="password">Senha</string>
    <string name="dont_have_account">Não possui uma conta ainda?</string>
    <string name="create_account">Crie sua conta</string>
    <string name="keep_logged_in">Manter Logado</string>
    <string name="login_invalid">E-mail ou senha inválidos!</string>
    <string name="fill_all_fields">Preencha todos os campos!</string>
    <string name="back_icon">An arrow icon</string>
    <string name="name_label">Nome:*</string>
    <string name="name">Nome</string>
    <string name="cpf_label">CPF:*</string>
    <string name="cpf">CPF</string>
    <string name="confirm_password_label">Confirmar Senha:*</string>
    <string name="already_have_account">Já possui conta?</string>
    <string name="login_to_your_account">Entre na sua conta</string>
    <string name="term_and_conditions_bravo">Termos e Condições de Uso do Aplicativo Bravo</string>
    <string name="last_uptade_term_and_conditions">Última atualização: 17/09/2024</string>
    <string name="term_and_conditions_text">***ESTE É UM APLICATIVO DESENVOLVIDO PARA UM PROJETO ACADÊMICO, NÃO CONSIDERE COMO UM SITE DE VENDAS REAL. NADA ESTÁ DISPONIVEL PARA COMPRAS E NENHUMA INFORMAÇÃO CONTIDA NESTE SITE CONDIZ COM AS LEIS DO BRASIL OU COM A REALIDADE DO MUNDO.***Bem-vindo ao aplicativo Bravo (\"Aplicativo\"), desenvolvido e mantido pela Bravo Concessionária (\"Bravo\"). Ao utilizar o Aplicativo, você concorda com os seguintes Termos e Condições. Leia-os atentamente antes de usar o Aplicativo. 1. Aceitação dos Termos Ao acessar e utilizar o Aplicativo, você concorda em estar vinculado a estes Termos e Condições, bem como às nossas Políticas de Privacidade. Se você não concorda com qualquer parte destes termos, não deve utilizar o Aplicativo. 2. Uso do Aplicativo 2.1. O Aplicativo destina-se exclusivamente para fins pessoais e não comerciais. É permitido apenas o uso do Aplicativo conforme autorizado pela Bravo. 2.2. Você concorda em usar o Aplicativo de maneira legal e de acordo com todas as leis e regulamentos aplicáveis. Você não pode usar o Aplicativo para qualquer propósito ilegal ou não autorizado. 3. Cadastro e Conta 3.1. Para acessar certos recursos do Aplicativo, você pode ser solicitado a se cadastrar e criar uma conta. Você é responsável por manter a confidencialidade das informações de sua conta, incluindo sua senha. 3.2. Você concorda em fornecer informações precisas, completas e atualizadas durante o processo de registro e a manter essas informações atualizadas durante o uso do Aplicativo. 4. Compras e Serviços 4.1. O Aplicativo pode permitir que você visualize veículos, agende test drives, realize compras e solicite serviços da Bravo. Todas as compras e solicitações realizadas através do Aplicativo estão sujeitas aos termos e condições específicos desses serviços, que serão apresentados no momento da compra ou solicitação. 4.2. A Bravo reserva-se o direito de modificar os preços, especificações e disponibilidade de qualquer produto ou serviço a qualquer momento sem aviso prévio. 5. Propriedade Intelectual 5.1. Todos os conteúdos do Aplicativo, incluindo, mas não se limitando a textos, imagens, logotipos, gráficos, ícones, botões, software e outros materiais, são de propriedade exclusiva da Bravo ou de seus licenciadores e estão protegidos por leis de direitos autorais e outras leis de propriedade intelectual. 5.2. É proibido copiar, reproduzir, modificar, distribuir ou criar trabalhos derivados de qualquer conteúdo do Aplicativo sem a permissão expressa por escrito da Bravo. 6. Limitação de Responsabilidade 6.1. O Aplicativo é fornecido \"como está\" e \"conforme disponível\". A Bravo não garante que o Aplicativo estará livre de erros, interrupções ou falhas. 6.2. Em nenhuma circunstância a Bravo será responsável por quaisquer danos diretos, indiretos, incidentais, consequenciais ou especiais decorrentes do uso ou da incapacidade de uso do Aplicativo. 7. Alterações aos Termos 7.1. A Bravo reserva-se o direito de modificar estes Termos e Condições a qualquer momento. Quaisquer alterações serão publicadas no Aplicativo e entrarão em vigor imediatamente após sua publicação. 7.2. É sua responsabilidade revisar os Termos e Condições periodicamente. Seu uso continuado do Aplicativo após qualquer modificação constitui sua aceitação dos termos modificados. 8. Lei Aplicável e Jurisdição 8.1. Estes Termos e Condições serão regidos e interpretados de acordo com as leis do Brasil. 8.2. Quaisquer disputas decorrentes ou relacionadas a estes Termos e Condições serão submetidas à jurisdição exclusiva dos tribunais competentes na cidade São Paulo, São Paulo. 9. Contato 9.1. Se você tiver dúvidas ou preocupações sobre estes Termos e Condições, entre em contato conosco pelo e-mail: contatos@bravo.com ou pelo telefone: 55 11 99999-9999.</string>
    <string name="register">Criar conta</string>
    <string name="password_match">A confirmação de senha deve ser igual a senha</string>
    <string name="invalid_cpf">CPF inválido</string>
    <string name="failed_connect_server">Falha ao se conectar ao servidor</string>
    <string name="failed_execute_server">Falha ao executar serviço</string>
    <string name="failed_term_and_conditions">Para se cadastrar, você precisa aceitar os termos e condições</string>
    <string name="error_on_register">Erro ao cadastrar usuário</string>
    <string name="country_currency">BR</string>
    <string name="language_currency">pt-BR</string>
    <string name="recently_viewed">Vistos Recentemente</string>
    <string name="buy_again">Compre Novamente</string>
    <string name="logout">Sair</string>
    <string name="my_adresses">Meus Endereços</string>
    <string name="my_orders">Meus Pedidos</string>
    <string name="edit_btn">Botão de edição de perfil</string>
    <string name="config_btn">Botão da página de configurações</string>
    <string name="failed_loading_products">Erro ao carregar os produtos</string>
    <string name="no_description">Sem descricão.</string>
    <string name="main_photo">Foto principal do Produto</string>
    <string name="minus_icon">Ícone de menos</string>
    <string name="plus_icon">Ícone de mais</string>
    <string name="zero">0</string>
    <string name="add_to_shopcart">Adicionar ao Carrinho</string>
    <string name="buy">COMPRAR</string>
    <string name="description">Descrição</string>
    <string name="maybe_like">Você talvez goste também</string>
    <string name="last_units_available">*ÚLTIMAS UNIDADES DISPONÍVEIS*</string>
    <string name="product_added_cart">Produto adicionado ao carrinho com sucesso!</string>
    <string name="invalid_qty">Quantidade inválida!</string>
    <string name="invalid_product">Produto inválido!</string>
    <string name="insufficient_qty_in_stock">Quantidade insuficiente em estoque!</string>
    <string name="failed_to_insert_product">Falha ao inserir o produto ao carrinho</string>
    <string name="min_qty_reached">Quantidade mínima atingida</string>
    <string name="max_qty_reached">Quantidade máxima atingida</string>
    <string name="login_to_add_to_cart">Efetue o login para adicionar ao carrinho</string>
    <string name="login_to_buy">Efetue o login para comprar</string>
    <string name="failed_to_insert_product_to_cart">Falha ao inserir o produto ao carrinho</string>
    <string name="server_failed">Falha no servidor! Tente novamente mais tarde</string>
    <string name="cant_connect_to_server">Não foi possível se conectar ao servidor</string>
    <string name="failed_execute_service">Falha ao executar serviço</string>
    <string name="qty">Quantidade</string>
    <string name="price">Preço</string>
    <string name="product_unavailable">Produto indisponível</string>
</resources>